kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marxist-chat
  labels:
    name: marxist-chat
